--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,6 @@
 NODE_ENV=development
 PORT=5000
+# Use local MongoDB, or a valid Atlas URI from https://cloud.mongodb.com (e.g. mongodb+srv://user:pass@cluster0.XXXXX.mongodb.net/dbname)
 MONGODB_URI=mongodb://localhost:27017/niolla_pm
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRES_IN=7d
