--- a/backend/package.json
+++ b/backend/package.json
@@ -13,18 +13,22 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.68.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "pdfkit": "^0.15.0"
+    "multer": "^2.0.2",
+    "pdfkit": "^0.15.0",
+    "pizzip": "^3.2.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.10.5",
     "@types/pdfkit": "^0.13.3",
     "ts-node": "^10.9.2",
