--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "docx": "^9.5.0",
     "docxtemplater": "^3.68.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
