--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "libreoffice-convert": "^1.8.1",
     "mongoose": "^8.0.3",
     "multer": "^2.0.2",
+    "pdf-lib": "^1.17.1",
     "pizzip": "^3.2.0"
   },
   "devDependencies": {
