--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,3 +4,5 @@ PORT=5000
 MONGODB_URI=mongodb://localhost:27017/niolla_pm
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 JWT_EXPIRES_IN=7d
+# Optional: path to LibreOffice soffice (e.g. "C:\Program Files\LibreOffice\program\soffice.exe"). Needed for PDF that matches your Word template.
+# LIBREOFFICE_PATH=
