--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ node_modules/
 .env.local
 .env.*.local
 
+# Google service account key (never commit)
+backend/config/google-service.json
+
 # Build output
 dist/
 build/
