--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,7 @@
   "installCommand": "cd backend && npm install && cd ../frontend && npm install",
   "framework": null,
   "rewrites": [
+    { "source": "/oauth2callback", "destination": "/api/oauth2callback" },
     { "source": "/api/:path*", "destination": "/api" },
     { "source": "/((?!api/).*)", "destination": "/index.html" }
   ]
